--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -1,3 +1,14 @@
-html{
-    background-color:var(--background-color);
+@import "_animation";
+
+html {
+
+    background-color: var(--background-color);
+}
+
+.container {
+    padding: 0 3rem;
+}
+
+.app-icon {
+    fill: var(--p-text-color)
 }
