--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -24,10 +24,18 @@ html {
     display: block;
 }
 
+.text-center {
+    text-align: center;
+}
+
 @media (min-width: 1025px) {
     .hide-desktop {
         display: none !important;
     }
+}
+
+.flex-column {
+    flex-direction: column !important;
 }
 
 @media (min-width: 1025px) {
