--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -1,12 +1,58 @@
 @import "_animation";
-*{
-    font-family: "Montserrat", sans-serif;  
+
+/* Simple CSS Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+html {
+    line-height: 1.15;
+    /* Improve readability */
+    -webkit-text-size-adjust: 100%;
+    /* Prevent font scaling in iOS */
+}
+
+body {
+    font-family: sans-serif;
+    /* Set a default font */
+    font-size: 16px;
+    /* Set a default font size */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+    /* Normalize heading font weights */
+}
+
+ul,
+ol {
+    list-style: none;
+    /* Remove default list styles */
+}
+
+img {
+    max-width: 100%;
+    /* Responsive images */
+    height: auto;
+    /* Maintain aspect ratio */
+}
+
+* {
+    font-family: "Montserrat", sans-serif;
+}
+
 .font-light {
     font-family: "Montserrat", sans-serif !important;
     font-weight: 300 !important;
 }
-  
+
 .font-regular {
     font-family: "Montserrat", sans-serif !important;
     font-weight: 400 !important;
@@ -21,9 +67,9 @@
     font-family: "Montserrat", sans-serif !important;
     font-weight: 700 !important;
 }
-  
-body{
-    background-color:var(--background-color);
+
+body {
+    background-color: var(--background-color);
 }
 
 .ltr {
